src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Budget_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calls_Made__c</fullName>
        <description>Tracking number of calls made for campaigns</description>
        <label>Calls Made (Attempts)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Involvement__c</fullName>
        <label>Campaign Involvement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email Sent</fullName>
                </value>
                <value>
                    <fullName>Email Opened</fullName>
                </value>
                <value>
                    <fullName>Email Link Clicked</fullName>
                </value>
                <value>
                    <fullName>Follow Up Email Opened</fullName>
                </value>
                <value>
                    <fullName>Follow Up Email Clicked</fullName>
                </value>
                <value>
                    <fullName>Attended Conference</fullName>
                </value>
                <value>
                    <fullName>Spoke to at Conference</fullName>
                </value>
                <value>
                    <fullName>Filled Out Door Prize Survey</fullName>
                </value>
                <value>
                    <fullName>Business Card Left</fullName>
                </value>
                <value>
                    <fullName>Door Prize Winner</fullName>
                </value>
                <value>
                    <fullName>Plans to Attend Conference</fullName>
                </value>
                <value>
                    <fullName>Meeting Scheduled at Conference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Purchase_Timeframe__c</fullName>
        <label>Estimated Purchase Timeframe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluating_Systems__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Looking for CAD, RMS or Mobile</description>
        <label>Evaluating Systems</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Selection__c</fullName>
        <description>Sync field from ActOn to SF for event selection option on registration forms</description>
        <inlineHelpText>Sync field from ActOn to SF for event selection option on registration forms</inlineHelpText>
        <label>Event Selection</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_Decision_Maker__c</fullName>
        <label>Name: Decision Maker</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Population_of_Area_Served__c</fullName>
        <label>Population of Area Served</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Sworn_Officer__c</fullName>
        <label>Total Sworn Officer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unhappy_w_existing_Vendor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unhappy w/existing Vendor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website_Message__c</fullName>
        <label>Website - Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website_Product_Interest__c</fullName>
        <label>Website - Product Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <sharingModel>ControlledByCampaign</sharingModel>
</CustomObject>